removed border on heading btn

--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ header button {
     border-radius: 0.5rem;
     cursor: pointer;
     font-weight: bold;
+    border:none;
 }
 
 @media (max-width:1074px) {
